# faster-whisper-GUI

./: .gitignore  README.md  UPDATE_SUMMARY.md  check_cuda.py  main.py  pyproject.toml
src/: __init__.py  config.py  environment_checker.py  file_manager.py  gui.py  media_converter.py  output_formatter.py  transcription_service.py
