[project]
name = "faster-whisper-gui"
version = "0.1.0"
description = "A Gradio-based GUI for faster-whisper audio/video transcription with CUDA support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "gradio>=4.0.0",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.0.0",
]
